--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     
   }      
   .sidebar{
-     background-color: #d7da2d; 
+     background-color: #000; 
     width: 340px; 
     border-radius: 1rem;    /*1rem=16px*/
 
@@ -76,20 +76,30 @@
     border-radius: 1rem;
     height: 100%;
     
-    margin-top: 0.75rem;
+    margin-top: 0.5rem;
+    padding: 0.5rem 0.75rem;
   }
   
   .option {
     display: flex;
     justify-content: space-between;
-     /* justify-content: space-between;  */
+      justify-content: space-between;  
+      background-color: #121212;
      align-items: center;
+     
   
    
   }
-    .icon{
-    justify-content: end;
-  }  
+  .icons{
+    font-size: 2.rem
+    opacity: 0.7;
+    margin-right: 1rem;
+    display: flex;
+  }
+  .icons i{
+    font-size: 1.25rem;
+    opacity: 0.7;
+  }
    
   .lib_option{
     display: flex  ;
